vlib/v/checker/tests/unwrapped_result_infix_err.vv
fn f(k string) !bool {
	return true
}

fn g() ! {
	assert f('1')! == true
	assert f('1') == true
}

fn main() {
	g()!
}
